--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "redux-devtools-extension": "^2.13.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
