--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "react-scripts": "1.0.17",
     "redux-devtools-extension": "^2.13.2"
   },
