--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
+    "jsdom": "12.0.0",
+    "jsdom-global": "3.0.2",
     "react-scripts": "1.0.17",
     "redux-devtools-extension": "^2.13.2"
   },
