add steps to azure pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,5 +10,7 @@ variables:
   imageName: 'your-container-image-name:$(build.buildId)'
 
 steps:
+- script: yarn install
+- script: yarn build
 - script: docker build -f Dockerfile -t $(imageName) .
   displayName: 'docker build'
