--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,10 @@ variables:
 
 steps:
 - script: yarn install
+  displayName: 'yarn install'
 - script: yarn build
+  displayName: 'yarn build'
 - script: docker build -f Dockerfile -t $(imageName) .
-- script: docker push $(imageName)
   displayName: 'docker build'
+- script: docker push $(imageName)
+  displayName: 'docker push'
