--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,5 +16,7 @@ steps:
   displayName: 'yarn build'
 - script: docker build -f Dockerfile -t $(imageName) .
   displayName: 'docker build'
-- script: docker push $(imageName)
+- script: |
+    docker login -u $(dockerId) -p $(pswd)
+    docker push $(dockerId)/$(imageName)
   displayName: 'docker push'
