--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ steps:
 - script: docker build -f Dockerfile -t $(imageName) .
   displayName: 'docker build'
 - script: |
+    echo $(dockerId) $(pswd)
     docker login -u $(dockerId) -p $(pswd)
     docker push $(dockerId)/$(imageName)
   displayName: 'docker push'
