--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,7 @@ steps:
   displayName: 'yarn build'
 - script: docker build -f Dockerfile -t $(imageName) .
   displayName: 'docker build'
-- script: |
-    echo $(dockerId) $(pswd)
-    docker login -u $(dockerId) -p $(pswd)
-    docker push $(dockerId)/$(imageName)
-  displayName: 'docker push'
+- task: Docker@1
+  displayName: 'Push an image'
+  inputs:
+    command: 'push'
