--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ services:
     - docker
 
 before_install:
+  - yarn install
+  - yarn build
   - docker build -t bradleylandis/hangman-react .
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
