--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
-language: javascript
+language: node_js
 
 services:
     - docker
 
 before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s --
+  - export PATH="$HOME/.yarn/bin:$PATH"
   - yarn install
   - yarn build
   - docker build -t bradleylandis/hangman-react .
