add docker push to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
   - "10"
-  
+
 services:
   - docker
 
@@ -12,3 +12,4 @@ before_install:
   - yarn build
   - docker build -t bradleylandis/hangman-react .
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker push bradleylandis/hangman-react
