--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ before_install:
   - yarn install
   - yarn build
   - docker build -t bradleylandis/hangman-react .
-deploy:
+after_script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push bradleylandis/hangman-react
