try to limit the docker push to only the master branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,4 @@ before_install:
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push bradleylandis/hangman-react
+  if: branch = master
