--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ before_install:
   - yarn build
   - docker build -t bradleylandis/hangman-react .
 after_success:
-  - test $TRAVIS_BRANCH = "master"
+  - test $TRAVIS_BRANCH = "master" && test $TRAVIS_PULL_REQUEST = "false"
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push bradleylandis/hangman-react
