fixing issue with api

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "enzyme-adapter-react-16": "^1.5.0",
     "jsdom": "12.0.0",
     "jsdom-global": "3.0.2",
-    "react-scripts": "1.1.5",
+    "react-scripts": "^3.1.2",
     "redux-devtools-extension": "^2.13.2"
   },
   "scripts": {
@@ -24,5 +24,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
