--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,8 @@ services:
   - docker
 
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s --
-  - export PATH="$HOME/.yarn/bin:$PATH"
-  - yarn install
-  - yarn build
+  - npm install
+  - npm run build
   - docker build -t bradleylandis/hangman-react .
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
