--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,21 +1,44 @@
-# Node.js
-# Build a general Node.js project with npm.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
+# Docker
+# Build and push an image to Azure Container Registry
+# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
 - master
 
-pool:
-  vmImage: 'ubuntu-latest'
+resources:
+- repo: self
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+variables:
+  # Container registry service connection established during pipeline creation
+  dockerRegistryServiceConnection: 'fec5cb22-bb19-48e4-a2b9-9ecf7e1acadb'
+  imageRepository: 'hangman'
+  dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
+  containerRegistry: 'blandiscontainerregistry.azurecr.io'
+  tag: '$(Build.BuildId)'
 
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+  # Agent VM image name
+  vmImageName: 'ubuntu-latest'
+
+stages:
+- stage: Build
+  displayName: Build and push stage
+  jobs:
+  - job: Build
+    displayName: Build
+    pool:
+      vmImage: $(vmImageName)
+    steps:
+    - script: npm install
+      displayName: 'npm install'
+    - script: npm run build
+      displayName: 'build web'
+    - task: Docker@2
+      displayName: Build and push an image to container registry
+      inputs:
+        command: buildAndPush
+        repository: $(imageRepository)
+        dockerfile: $(dockerfilePath)
+        containerRegistry: $(dockerRegistryServiceConnection)
+        tags: |
+          $(tag)
+          latest
