--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "react-dom": "^16.2.0",
     "react-redux": "^7.2.6",
     "redux": "^4.0.0",
-    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
@@ -20,7 +19,8 @@
     "jsdom-global": "3.0.2",
     "prettier": "^2.5.1",
     "react-scripts": "^5.0.0",
-    "redux-devtools-extension": "^2.13.2"
+    "redux-devtools-extension": "^2.13.2",
+    "redux-mock-store": "^1.5.4"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
