--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "form-serialize": "^0.7.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -16,17 +16,15 @@
     "@testing-library/user-event": "^13.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jsdom": "12.0.0",
-    "jsdom-global": "3.0.2",
     "prettier": "^2.5.1",
     "react-scripts": "^5.0.0",
-    "redux-devtools-extension": "^2.13.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-mock-store": "^1.5.4"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "browserslist": {
