--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.5",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "react-scripts": "^5.0.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
@@ -38,32 +43,9 @@
     ]
   },
   "eslintConfig": {
-    "parserOptions": {
-      "ecmaVersion": 2021,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "env": {
-      "es6": true,
-      "browser": true,
-      "node": true
-    },
-    "plugins": [
-      "prettier",
-      "react"
-    ],
     "extends": [
-      "plugin:prettier/recommended",
-      "plugin:react/recommended",
-      "plugin:jest/recommended",
-      "plugin:jest/style"
-    ],
-    "settings": {
-      "react": {
-        "version": "detect"
-      }
-    }
+      "react-app",
+      "react-app/jest"
+    ]
   }
 }
