--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
     "@types/form-serialize": "^0.7.2",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/redux": "^3.6.0",
     "@types/redux-mock-store": "^1.0.3",
+    "@types/testing-library__jest-dom": "^5.14.2",
+    "@types/testing-library__react": "^10.2.0",
+    "@types/testing-library__user-event": "^4.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
