--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:prettier/recommended",
+      "plugin:jest/style"
     ]
   }
 }
