--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/axios": "^0.14.0",
-    "@types/form-serialize": "^0.7.2",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.38",
@@ -34,7 +33,7 @@
     "typescript": "^4.5.4"
   },
   "scripts": {
-    "start": "set PORT=3001 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
