set up pre-commit hook

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/testing-library__user-event": "^4.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
     "prettier": "^2.5.1",
     "react-scripts": "^5.0.0",
     "redux-devtools-extension": "^2.13.9",
