--- a/api/package.json
+++ b/api/package.json
@@ -9,9 +9,12 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.24.0"
+  },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
+    "@types/axios": "^0.14.0",
     "typescript": "^4.0.0"
   }
 }
