--- a/api/package.json
+++ b/api/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.5",
     "mongoose": "^5.13.13"
   },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
+    "@types/jsonwebtoken": "^8.5.6",
     "typescript": "^4.0.0"
   }
 }
