--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -16,7 +16,7 @@
     "auth": {
       "identityProviders": {
         "customOpenIdConnectProviders": {
-          "myProvider": {
+          "auth0": {
             "registration": {
               "clientIdSettingName": "AUTH0_CLIENT_ID",
               "clientCredential": {
