--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -19,8 +16,6 @@
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "@types/redux": "^3.6.0",
-    "@types/redux-mock-store": "^1.0.3",
     "@types/testing-library__jest-dom": "^5.14.2",
     "@types/testing-library__react": "^10.2.0",
     "@types/testing-library__user-event": "^4.2.0",
@@ -29,8 +24,6 @@
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
     "react-scripts": "^5.0.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-mock-store": "^1.5.4",
     "typescript": "^4.5.4"
   },
   "scripts": {
