--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "watch": "tsc -w",
     "prestart": "npm run build",
     "start": "func start",
-    "test": "echo \"No tests yet...\""
+    "test": "jest",
+    "lint": "eslint **/* --ext .ts"
   },
   "dependencies": {
     "axios": "^0.24.0",
