--- a/api/package.json
+++ b/api/package.json
@@ -10,12 +10,17 @@
     "test": "jest",
     "lint": "eslint **/* --ext .ts"
   },
+  "jest": {
+    "preset": "ts-jest",
+    "testPathIgnorePatterns": ["dist"]
+  },
   "dependencies": {
     "axios": "^0.24.0",
     "mongoose": "^5.13.13"
   },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
+    "ts-jest": "^27.1.2",
     "typescript": "^4.0.0"
   }
 }
