--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
     "prestart": "npm run build",
     "start": "func start",
     "test": "jest",
-    "lint": "eslint **/* --ext .ts"
+    "lint": "eslint **/*"
   },
   "jest": {
     "preset": "ts-jest",
